--- a/frontend/src/app/modules/mips/components/list/list-subset/list-subset.component.scss
+++ b/frontend/src/app/modules/mips/components/list/list-subset/list-subset.component.scss
@@ -598,7 +598,7 @@ a {
 
 :host::ng-deep.subset-table {
   td.mat-cell {
-    border-bottom-color: #1aab9b;
+    border-bottom-color: rgba(26, 171, 155, 0.3);
     padding-left: 14px !important;
   }
 
@@ -649,7 +649,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 tr.example-expanded-row {
-  border-bottom: 1px solid #1aab9b;
+  border-bottom: 1px solid rgba(26, 171, 155, 0.3);
   display: block;
 }
 
